src/test/contracts/top_level_patterns/negative/reasonligo/tuple.religo
let r = (1n, 1, "Hello")
let (a, a, c) = r